--- a/docroot/sites/all/themes/hwc_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/responsive-max-767.less
@@ -1693,7 +1693,7 @@ header.navbar-default{
 /*end press room*/
 
 /*news*/
-.page-news{
+.page-news, .page-media-centre-press-room{
 	.main-container {
 		h1{
 			border-bottom: 1px dotted @color3;
