--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -2842,7 +2842,7 @@ ul.tabs--primary.nav.nav-tabs{
 		}
 	}
 }
-.node-news{
+.node-news, .node-press-release{
 	h1{
 		font-style: normal;
 		font-weight: normal;
