--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -518,6 +518,11 @@
     	right: 0;
 	}
 
+	.page-media-centre-press-room .main-container #block-system-main .view .views-row .more-link{
+		bottom: -15px;
+    	right: 0;
+	}
+
 	header.navbar-default .campaigns-header .navbar-header .region-header #block-search-form .input-group input{
 		width: 0;
 		height: 31px;
