--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -3143,7 +3143,7 @@ body.good-practice-exchange{
 
 /* News and General Search view */
 
-.page-media-centre-news, .page-search, .page-media-centre-press-room{
+.page-media-centre-news, .page-search, .page-media-centre-press-room, .page-media-centre-press-room{
 	.main-container{
 		background: #efefef;
 		padding-bottom: 2em;
