--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -2703,18 +2703,21 @@ body.good-practice-exchange .footer {
 /* News and General Search view */
 .page-media-centre-news .main-container,
 .page-search .main-container,
+.page-media-centre-press-room .main-container,
 .page-media-centre-press-room .main-container {
   background: #efefef;
   padding-bottom: 2em;
 }
 .page-media-centre-news .main-container #block-system-main .view,
 .page-search .main-container #block-system-main .view,
+.page-media-centre-press-room .main-container #block-system-main .view,
 .page-media-centre-press-room .main-container #block-system-main .view {
   clear: both;
   margin-top: 1em;
 }
 .page-media-centre-news .main-container #block-system-main .view .views-row,
 .page-search .main-container #block-system-main .view .views-row,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row {
   float: left;
   width: 100%;
@@ -2730,6 +2733,7 @@ body.good-practice-exchange .footer {
 }
 .page-media-centre-news .main-container #block-system-main .view .views-row:after,
 .page-search .main-container #block-system-main .view .views-row:after,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row:after,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row:after {
   content: ' ';
   background: url(../images/green-line.png) repeat-x;
@@ -2743,6 +2747,7 @@ body.good-practice-exchange .footer {
 }
 .page-media-centre-news .main-container #block-system-main .view .views-row .more-link,
 .page-search .main-container #block-system-main .view .views-row .more-link,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row .more-link,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row .more-link {
   border: 1px solid #b0b1b3;
   border-bottom: 1px solid #b0b1b3 !important;
@@ -2763,6 +2768,7 @@ body.good-practice-exchange .footer {
 }
 .page-media-centre-news .main-container #block-system-main .view .views-row .more-link:hover,
 .page-search .main-container #block-system-main .view .views-row .more-link:hover,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row .more-link:hover,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row .more-link:hover {
   text-decoration: none;
   color: #58595b;
@@ -2777,12 +2783,14 @@ body.good-practice-exchange .footer {
 }
 .page-media-centre-news .main-container #block-system-main .view .views-row .more-link:before,
 .page-search .main-container #block-system-main .view .views-row .more-link:before,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row .more-link:before,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row .more-link:before {
   content: '';
   display: none;
 }
 .page-media-centre-news .main-container #block-system-main .view .views-row .field-name-field-summary,
 .page-search .main-container #block-system-main .view .views-row .field-name-field-summary,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row .field-name-field-summary,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row .field-name-field-summary {
   font-weight: normal;
   margin-top: 0;
@@ -2790,17 +2798,20 @@ body.good-practice-exchange .footer {
 }
 .page-media-centre-news .main-container #block-system-main .view .views-row .field-name-body,
 .page-search .main-container #block-system-main .view .views-row .field-name-body,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row .field-name-body,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row .field-name-body {
   padding-bottom: 2em;
 }
 .page-media-centre-news .main-container #block-system-main .view .views-row h2,
 .page-search .main-container #block-system-main .view .views-row h2,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row h2,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row h2 {
   margin-top: 0;
   line-height: 23px;
 }
 .page-media-centre-news .main-container #block-system-main .view .views-row h2 a,
 .page-search .main-container #block-system-main .view .views-row h2 a,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row h2 a,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row h2 a {
   font-style: normal;
   font-size: 2.1rem;
@@ -2810,24 +2821,28 @@ body.good-practice-exchange .footer {
 }
 .page-media-centre-news .main-container #block-system-main .view .views-row h2 a:before,
 .page-search .main-container #block-system-main .view .views-row h2 a:before,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row h2 a:before,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row h2 a:before {
   padding-right: 0;
   content: '';
 }
 .page-media-centre-news .main-container #block-system-main .view .views-row .views-field-title-field span,
 .page-search .main-container #block-system-main .view .views-row .views-field-title-field span,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-title-field span,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-title-field span {
   margin-top: 0;
   line-height: 23px;
 }
 .page-media-centre-news .main-container #block-system-main .view .views-row .views-field-title-field span:before,
 .page-search .main-container #block-system-main .view .views-row .views-field-title-field span:before,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-title-field span:before,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-title-field span:before {
   padding-right: 0;
   content: '';
 }
 .page-media-centre-news .main-container #block-system-main .view .views-row .views-field-title-field span a,
 .page-search .main-container #block-system-main .view .views-row .views-field-title-field span a,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-title-field span a,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-title-field span a {
   font-style: normal;
   font-size: 2.1rem;
@@ -2837,6 +2852,7 @@ body.good-practice-exchange .footer {
 }
 .page-media-centre-news .main-container #block-system-main .view .views-row .views-field-search-api-excerpt a,
 .page-search .main-container #block-system-main .view .views-row .views-field-search-api-excerpt a,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-search-api-excerpt a,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-search-api-excerpt a {
   border: 1px solid #b0b1b3;
   border-bottom: 1px solid #b0b1b3 !important;
@@ -2851,6 +2867,7 @@ body.good-practice-exchange .footer {
 }
 .page-media-centre-news .main-container #block-system-main .view .views-row .views-field-search-api-excerpt a:hover,
 .page-search .main-container #block-system-main .view .views-row .views-field-search-api-excerpt a:hover,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-search-api-excerpt a:hover,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-search-api-excerpt a:hover {
   text-decoration: none;
   color: #58595b;
@@ -2865,20 +2882,25 @@ body.good-practice-exchange .footer {
 }
 .page-media-centre-news .main-container #block-system-main .view .views-row .views-field-search-api-excerpt a:before,
 .page-search .main-container #block-system-main .view .views-row .views-field-search-api-excerpt a:before,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-search-api-excerpt a:before,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-search-api-excerpt a:before {
   content: '';
 }
 .page-media-centre-news .main-container #block-system-main .view .views-row .views-field-field-article-type,
 .page-search .main-container #block-system-main .view .views-row .views-field-field-article-type,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-field-article-type,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-field-article-type,
 .page-media-centre-news .main-container #block-system-main .view .views-row .views-field-field-publication-type,
 .page-search .main-container #block-system-main .view .views-row .views-field-field-publication-type,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-field-publication-type,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-field-publication-type,
 .page-media-centre-news .main-container #block-system-main .view .views-row .views-field-field-country,
 .page-search .main-container #block-system-main .view .views-row .views-field-field-country,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-field-country,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-field-country,
 .page-media-centre-news .main-container #block-system-main .view .views-row .views-field-field-file,
 .page-search .main-container #block-system-main .view .views-row .views-field-field-file,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-field-file,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-field-file {
   color: #003399;
   padding-top: 10px;
@@ -2887,24 +2909,30 @@ body.good-practice-exchange .footer {
 .page-media-centre-news .main-container #block-system-main .view .views-row .views-field-field-article-type .views-label,
 .page-search .main-container #block-system-main .view .views-row .views-field-field-article-type .views-label,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-field-article-type .views-label,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-field-article-type .views-label,
 .page-media-centre-news .main-container #block-system-main .view .views-row .views-field-field-publication-type .views-label,
 .page-search .main-container #block-system-main .view .views-row .views-field-field-publication-type .views-label,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-field-publication-type .views-label,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-field-publication-type .views-label,
 .page-media-centre-news .main-container #block-system-main .view .views-row .views-field-field-country .views-label,
 .page-search .main-container #block-system-main .view .views-row .views-field-field-country .views-label,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-field-country .views-label,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-field-country .views-label,
 .page-media-centre-news .main-container #block-system-main .view .views-row .views-field-field-file .views-label,
 .page-search .main-container #block-system-main .view .views-row .views-field-field-file .views-label,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-field-file .views-label,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row .views-field-field-file .views-label {
   font-weight: bold;
 }
 .page-media-centre-news .main-container #block-system-main .view .views-row-last,
 .page-search .main-container #block-system-main .view .views-row-last,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row-last,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row-last {
   margin-bottom: 1em;
 }
 .page-media-centre-news .main-container #block-system-main .view .views-row-last:after,
 .page-search .main-container #block-system-main .view .views-row-last:after,
+.page-media-centre-press-room .main-container #block-system-main .view .views-row-last:after,
 .page-media-centre-press-room .main-container #block-system-main .view .views-row-last:after {
   background: none;
 }
@@ -9359,6 +9387,10 @@ body .form-control {
     background: #003399;
   }
   .page-media-centre-news .main-container #block-system-main .view .views-row .more-link {
+    bottom: -15px;
+    right: 0;
+  }
+  .page-media-centre-press-room .main-container #block-system-main .view .views-row .more-link {
     bottom: -15px;
     right: 0;
   }
