HW20-462 - Press Room - Improve the page

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -5104,6 +5104,9 @@ body.press-room .field-name-body {
 body.press-room .related-resources-title {
   padding-top: 1em;
 }
+body.press-room #block-osha-press-release-osha-press-contacts {
+  padding-top: 4px;
+}
 body.press-room #block-osha-press-release-osha-press-contacts h2 {
   font-size: 1.6em;
 }
