--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -5850,6 +5850,7 @@ body.press-room{
 		padding-top: 1em;
 	}
 	#block-osha-press-release-osha-press-contacts{
+		padding-top: 4px;
 		h2{
     		font-size: 1.6em;
 		}
