--- a/docroot/sites/all/modules/osha/osha_newsletter/includes/css/newsletter.css
+++ b/docroot/sites/all/modules/osha/osha_newsletter/includes/css/newsletter.css
@@ -451,6 +451,6 @@ p.tweet-link a {
   border-top: 1px solid #749b00;
 }
 
-.newsletter-full-width-list.newsletter-section.template-container > thead > tr:last-child .td-border{
+table.newsletter-full-width-list.newsletter-section.template-container > thead > tr.last .td-border{
   border-top: 0;
 }
