--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -116,7 +116,10 @@ html[lang=fr] header.navbar-default .campaigns-header #block-menu-menu-header-lo
 
 body.logged-in .navbar-header .col-xs-12.col-sm-9{
 	padding-top: 57px;
+}
 
+body.logged-in .navbar-header .col-xs-12.col-sm-9.toolbar-no{
+	padding-top: 15px;
 }
 
 body.logged-in.ocp .navbar-header .col-xs-12.col-sm-9{
@@ -405,13 +408,14 @@ select{
     		justify-content: center;
     		align-items: center;
     		background: #003399;
-    		border: 0;
+    		border: 2px solid #00309d;
     		width: 350px;
     		height: 56px;
     		font-size: 1.8rem;
     		&:hover{
-    			color: #FFF;
-    			background: #335CAD;
+    			color: #00309d;
+    			background: #e5f1ac;
+    			border: 2px solid #00309d;
     		}
 		}
 	}
@@ -685,6 +689,7 @@ ul.time-and-counters{
 		.box-before.news{
 			margin-bottom: 2em;
 			padding-bottom: 2em;
+			height: 100%;
 			h3{
 				position: relative;
 				&:before{
@@ -3085,7 +3090,7 @@ span.pages{
 	}
 }
 
-.page-tools-and-publications, .page-tools-and-publications-campaign-materials, .page-media-centre-news{
+.page-tools-and-publications, .page-tools-and-publications-campaign-materials, .page-media-centre-news, .page-media-centre-press-room{
 	.grey-background{
 		padding-bottom: 1em;
 	}
@@ -3138,7 +3143,7 @@ body.good-practice-exchange{
 
 /* News and General Search view */
 
-.page-media-centre-news, .page-search{
+.page-media-centre-news, .page-search, .page-media-centre-press-room, .page-media-centre-press-room{
 	.main-container{
 		background: #efefef;
 		padding-bottom: 2em;
@@ -3667,7 +3672,6 @@ div.workbench-info-block{
 	article{
 		margin-left: 0;
 		margin-right:  0;
-		padding: 2em;
 	}
 } 
 
@@ -5151,7 +5155,7 @@ body{
 		border-radius: 7px;
 		padding: 1em 0 1em 1em;
 		float: right;
-		margin-top: 18px;
+		margin-top: 34px;
 		width: 288px;
 		margin-bottom: 3em;
 		> div > span{
@@ -5338,6 +5342,10 @@ body{
 						}
 					}
 
+					.views-field-field-country-code{
+						padding-bottom: 1em;
+					}
+
 					.views-row-last{
 						border-bottom: 0;
 					}
@@ -5354,6 +5362,17 @@ body{
 .views-field-field-start-date-1{
 	padding-top: 0.5em;
 	font-weight: 600;
+}
+
+span.add-to-my-calendar{
+	display: block;
+	float: left;
+	margin-left: 400px;
+}
+
+.group-right2 span.add-to-my-calendar{
+	float: none;
+	margin-left: 0;
 }
 
 .add-to-calendar{
@@ -5824,11 +5843,20 @@ ul[data-sa-theme="basic-green"].ui-menu{
 body.press-room{
 	.field-name-body{
 		width: 100%;
-		text-align: center;
+		text-align: left;
 		padding: 0.6em 0.5em;
 	}
 	.related-resources-title{
 		padding-top: 1em;
+	}
+	#block-osha-press-release-osha-press-contacts{
+		padding-top: 4px;
+		h2{
+    		font-size: 1.6em;
+		}
+		p{
+			margin-bottom: 0;
+		}
 	}
 }
 
@@ -6186,11 +6214,6 @@ body.press-room, body.european-week{
 }
 
 body.european-week{
-
-	.page_title{
-		height: 225px;
-	}
-
 	#european_week_date{
 		color: #FFF;
 		font-size: 2.2em;
@@ -6450,6 +6473,11 @@ body.european-week{
 
 .float-img{
 	float: left;
+	margin-right: 1em;
+}
+
+.float-img-2{
+	float: left;
 	margin-right: 2em;
 }
 
@@ -6466,6 +6494,7 @@ body.european-week{
 .logged-in.ocp .profile-edit-links-container{
 	border-bottom: 2px solid #bcd75b;
 	padding-bottom: 3em;
+	margin-bottom: 3em;
 }
 
 .profile-edit-links-container{
@@ -6558,6 +6587,24 @@ body.european-week{
 					display:block;
 				}
 			}
+
+			.hwc-partner-private-link-block-title.unpublish{
+				background: #f1efef;
+			    border-color: #aba6a6;
+			    a{
+			    	color:#757272;
+			    	pointer-events: none;
+			    }
+			    
+			    &:hover{
+			    	background: #f1efef;
+			    	border-color: #aba6a6;
+			    	a{
+			    		color:#757272;
+			    	}
+			    	
+			    }
+			}
 		}
 	}
 
@@ -6571,6 +6618,19 @@ body.european-week{
 			&:hover{
 				a{
 					background: url(../images/mpp-create-event-hover.png) 0 50% no-repeat;
+					
+				}
+			}
+		}
+
+		.hwc-partner-private-link-block-title.unpublish{
+			a{
+				background: url(../images/pz-events-disabled.png) 0 50% no-repeat;
+			}
+
+			&:hover{
+				a{
+					background: url(../images/pz-events-disabled.png) 0 50% no-repeat;
 					
 				}
 			}
@@ -6591,9 +6651,20 @@ body.european-week{
 				}
 			}
 		}
+		.hwc-partner-private-link-block-title.unpublish{
+			a{
+				background: url(../images/pz-news-disabled.png) 0 50% no-repeat;
+			}
+			&:hover{
+				a{
+					background: url(../images/pz-news-disabled.png) 0 50% no-repeat;
+					
+				}
+			}
+		}
 	}
 	
-	.pane-hwc-partner-hwc-partner-private-link-2{
+	.pane-hwc-partner-hwc-partner-private-link-3{
 		.hwc-partner-private-link-block-title{
 			a{
 				background: url(../images/pz-good-practice.png) 0 50% no-repeat;
@@ -6607,9 +6678,22 @@ body.european-week{
 				}
 			}
 		}
+
+		.hwc-partner-private-link-block-title.unpublish{
+			a{
+				background: url(../images/mpp-good-practice-disabled.png) 0 50% no-repeat;
+			}
+			&:hover{
+				a{
+					background: url(../images/mpp-good-practice-disabled.png) 0 50% no-repeat;
+					
+				}
+			}
+		}
+
 	}
 
-	.pane-hwc-partner-hwc-partner-private-link-3{
+	.pane-hwc-partner-hwc-partner-private-link-2{
 		.hwc-partner-private-link-block-title{
 			a{
 				background: url(../images/pz-partner-resource.png) 0 50% no-repeat;
@@ -6946,7 +7030,7 @@ body.newsletter{
 									margin: 0 1em;
 									font-weight: 700;
 									text-align: center;
-									font-size: 0.95em;
+									font-size: 0.85em;
 									min-height: 150px;
 									background: #FFF;
     								border-radius: 7px;
@@ -7153,6 +7237,8 @@ body.newsletter{
 body.front-page{
 
 	.youtube-video{
+		margin-top: 0; 
+    	margin-right: 0; 
 		.hp-modal-content{
 			padding-bottom: 3em;
 		}
@@ -8085,7 +8171,7 @@ body.page-tools-and-publications-publications{
     				margin-bottom: 0;
 				}
 				.field.field-name-field-image{
-					width: auto;
+					width: 118px;
 				    margin-right: 0;
 				    float: left;
 				    min-height: 132px;
@@ -8919,7 +9005,60 @@ body.video-page{
 	    margin-top: 0;
 	    margin-bottom: 2em;
 	}
-}body.rel1{
+}
+
+/* Napo film fix width video */
+.video-js .vjs-tech{
+	height: auto !important;
+}
+
+.vjs-poster {
+    background-position: inherit !important;
+}
+
+/*MDR-3683*/
+#block-views-news-splash{
+	> div{
+		> div.view-content{
+			> div:nth-child(2){
+				padding-top: 1.5em;
+			}
+		}
+	}
+}
+
+.node-type-spotlight{
+	.back-links{
+		margin-bottom: 1em;
+	}
+	.field-name-field-image{
+		img{
+			float: left;
+    		margin-right: 1em;
+		}
+	}
+	.field.field-name-field-publication-date {
+	    padding-top: 0;
+	    margin-bottom: 0em;
+	    margin-top: 0;
+	}
+	.field.field-name-field-summary {
+		margin-bottom: 1em;
+    	margin-top: 0.5em;
+	}
+}
+
+.node-type-youtube{
+	.back-links{
+		margin-bottom: 1em;
+	}
+	.field-name-field-youtube{
+		float: left;
+    	margin-right: 1em;
+	}
+}
+
+body.rel1{
 	header.navbar-default .campaigns-header .navbar-header .header-text {
 		max-width: 320px !important;
 	    padding-left: 1em;
@@ -8928,4 +9067,28 @@ body.video-page{
 	    	color: #ef0511;
 	    }
 	}	
+}
+
+body{
+	button, .btn{
+		border-radius: 5px;
+	}
+	.form-control {
+	    border-top-right-radius: 5px;
+	    border-bottom-right-radius: 5px;
+	}	
+}
+
+
+.page-node-add-document{
+	.back-to-publications{
+		margin-bottom: 1em;
+		a{
+			font-weight: bold;
+    		padding-left: 0px;
+		}
+		img{
+			margin-right: 5px;
+		}
+	}
 }
