--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -7624,9 +7624,39 @@ body.video-page #block-hwc-article-recommended-resources .field-name-title-field
   margin-top: 0;
   margin-bottom: 2em;
 }
+/* Napo film fix width video */
+.video-js .vjs-tech {
+  height: auto !important;
+}
+.vjs-poster {
+  background-position: inherit !important;
+}
 /*MDR-3683*/
 #block-views-news-splash > div > div.view-content > div:nth-child(2) {
   padding-top: 1.5em;
+}
+.node-type-spotlight .back-links {
+  margin-bottom: 1em;
+}
+.node-type-spotlight .field-name-field-image img {
+  float: left;
+  margin-right: 1em;
+}
+.node-type-spotlight .field.field-name-field-publication-date {
+  padding-top: 0;
+  margin-bottom: 0em;
+  margin-top: 0;
+}
+.node-type-spotlight .field.field-name-field-summary {
+  margin-bottom: 1em;
+  margin-top: 0.5em;
+}
+.node-type-youtube .back-links {
+  margin-bottom: 1em;
+}
+.node-type-youtube .field-name-field-youtube {
+  float: left;
+  margin-right: 1em;
 }
 body.rel1 header.navbar-default .campaigns-header .navbar-header .header-text {
   max-width: 320px !important;
@@ -7635,6 +7665,24 @@ body.rel1 header.navbar-default .campaigns-header .navbar-header .header-text {
 body.rel1 header.navbar-default .campaigns-header .navbar-header .header-text span {
   display: block;
   color: #ef0511;
+}
+body button,
+body .btn {
+  border-radius: 5px;
+}
+body .form-control {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+.page-node-add-document .back-to-publications {
+  margin-bottom: 1em;
+}
+.page-node-add-document .back-to-publications a {
+  font-weight: bold;
+  padding-left: 0px;
+}
+.page-node-add-document .back-to-publications img {
+  margin-right: 5px;
 }
 .isMobile {
   float: right !important;
