--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -3209,7 +3209,7 @@ body.good-practice-exchange{
 					    }
 					}
 					.field-name-field-summary{
-						font-weight: normal;
+						font-weight: normal !important;
 						margin-top: 0;
 						padding-bottom: 2em;
 					}
