--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -8917,6 +8917,10 @@ body.rel1{
 	    	display: block;
 	    	color: #ef0511;
 	    }
+	}
+
+	.sticky-menu .col-sm-9 .header-text{
+		padding-top: 0!important;
 	}	
 }
 
