--- a/docroot/sites/all/themes/hwc_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/responsive-max-767.less
@@ -1693,7 +1693,7 @@ header.navbar-default{
 /*end press room*/
 
 /*news*/
-.page-news{
+.page-news, .page-media-centre-press-room{
 	.main-container {
 		h1{
 			border-bottom: 1px dotted @color3;
@@ -1711,9 +1711,8 @@ header.navbar-default{
 	    		display: inline-block;
 	    		padding-left: 0;
 	    	}
-		}
-		&.view-display-id-oshnews_list.container{
-			.field-type-datetime, .field-name-field-summary, .field-name-body{
+
+	    	.field-type-datetime, .field.field-name-field-summary, .field-name-body{
 				margin-left: @margin-movil;
 				margin-right: @margin-movil;
 			}
