--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -7706,6 +7706,21 @@ header.navbar-default .navbar-collapse nav ul.menu > li.first a:before {
   .sticky-menu .col-sm-9 {
     width: 100% !important;
   }
+  .sticky-menu .col-sm-9 a.pull-left {
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+    background-image: url("/sites/all/themes/hwc_frontend/images/header/logo-sticky.png");
+    display: inline-block;
+    width: 100px;
+    height: 77px;
+    float: left;
+    background-repeat: no-repeat;
+    margin-top: 6px;
+    padding-right: 8em !important;
+  }
   .sticky-menu .col-sm-9 a.pull-left img {
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
@@ -7714,6 +7729,7 @@ header.navbar-default .navbar-collapse nav ul.menu > li.first a:before {
     transition: all 0.3s;
     width: 100px !important;
     height: 77px !important;
+    display: none;
   }
   .sticky-menu .col-sm-9 a[title*="EU-OSHA"] {
     -webkit-transition: all 0.3s;
@@ -7761,7 +7777,7 @@ header.navbar-default .navbar-collapse nav ul.menu > li.first a:before {
     transition: all 0.6s;
     font-size: 1.5em !important;
     width: 300px !important;
-    padding-top: 0.3em !important;
+    padding-top: 0.5em !important;
     padding-left: 0em !important;
     float: right !important;
     text-align: right !important;
@@ -10627,19 +10643,22 @@ html:lang(no) .pane-node-field-provider .field-items,
   margin-right: 1em;
   margin-bottom: 1em;
 }
-.node-news h1 {
+.node-news h1,
+.node-press-release h1 {
   font-style: normal;
   font-weight: normal;
   color: #575757;
   font-size: 2.5em;
 }
-.node-news .field-name-field-image img {
+.node-news .field-name-field-image img,
+.node-press-release .field-name-field-image img {
   float: left;
   margin-top: 1.2em;
   margin-right: 1em;
   margin-bottom: 2px;
 }
-.node-news .group-left {
+.node-news .group-left,
+.node-press-release .group-left {
   padding-left: 0;
   padding-right: 30px;
 }
@@ -14074,10 +14093,12 @@ html:lang(mt) .get-involved-section .information-tailored .images-section .image
   bottom: 1px;
   right: 0;
   pointer-events: none;
-  background: #003399 url("../images/content/arrow-down.png") no-repeat right center;
+  background: #003399 url("../images/content/arrow-down.png") no-repeat 2px 3px;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 .page-node-add-document .node-events-form .form-type-select select,
 .page-node-add-events .node-events-form .form-type-select select,
@@ -14220,6 +14241,8 @@ html:lang(mt) .get-involved-section .information-tailored .images-section .image
 .page-node-edit .node-document-form .field-type-datetime #edit-field-start-date-und-0-value .form-item-field-start-date-und-0-value-date .date-clear {
   background: url('../images/content/input-calendar.png') no-repeat right top;
   background-size: 28px 28px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 .page-node-add-document .node-events-form .field-type-datetime #edit-field-start-date-und-0-value .form-item-field-start-date-und-0-value-time,
 .page-node-add-events .node-events-form .field-type-datetime #edit-field-start-date-und-0-value .form-item-field-start-date-und-0-value-time,
@@ -14265,6 +14288,8 @@ html:lang(mt) .get-involved-section .information-tailored .images-section .image
 .page-node-edit .node-document-form .field-type-datetime #edit-field-start-date-und-0-value2 .form-item-field-start-date-und-0-value2-date .date-clear {
   background: url('../images/content/input-calendar.png') no-repeat right top;
   background-size: 28px 28px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 .page-node-add-document .node-events-form .field-type-datetime #edit-field-start-date-und-0-value2 .form-item-field-start-date-und-0-value2-time,
 .page-node-add-events .node-events-form .field-type-datetime #edit-field-start-date-und-0-value2 .form-item-field-start-date-und-0-value2-time,
@@ -15531,6 +15556,7 @@ html:lang(mt) .get-involved-section .information-tailored .images-section .image
   margin-right: 10px;
   display: inline-block;
   font-weight: 500;
+  border-radius: 5px;
 }
 .node-type-document .field-type-file,
 .node-type-publication .field-type-file {
@@ -15629,6 +15655,7 @@ html:lang(mt) .get-involved-section .information-tailored .images-section .image
 }
 .view-id-partners_list .quicktabs-tabs {
   display: inline-block;
+  padding-left: 0;
 }
 .view-id-partners_list .quicktabs-tabs li {
   border: 1px dotted #749b00;
@@ -17320,7 +17347,8 @@ fieldset.captcha div {
   margin-left: -15px;
 }
 .alert.alert-block.alert-danger,
-.alert.alert-block.alert-success {
+.alert.alert-block.alert-success,
+.alert-warning.messages.warning {
   clear: both;
   margin-left: 25px;
   margin-right: 25px;
@@ -17328,7 +17356,8 @@ fieldset.captcha div {
   word-wrap: break-word;
 }
 .alert.alert-block.alert-danger ul,
-.alert.alert-block.alert-success ul {
+.alert.alert-block.alert-success ul,
+.alert-warning.messages.warning ul {
   margin-left: 1em;
   list-style-type: disc;
 }
@@ -17584,6 +17613,7 @@ input#edit-field-image-und-0-upload::before {
   width: 100%;
   height: 564px;
   background-color: black;
+  overflow: hidden;
 }
 .page-node-160 #block-views-napo-film-carousel-slidehow #napo_films .napo_films .num_slides > div .hwc-share-widget {
   border-top: none;
@@ -18693,10 +18723,10 @@ input#edit-field-image-und-0-upload::before {
 .page-national-focal-points #block-system-main .node-article .field-type-text-with-summary,
 .page-campaign-media-partners #block-system-main .node-article .field-type-text-with-summary,
 .page-campaign-partners-official-campaign-partners #block-system-main .node-article .field-type-text-with-summary {
-  padding-right: 15px;
-  padding-left: 15px;
-  width: 67%;
-  margin: 0 auto;
+  padding-right: 25px;
+  padding-left: 25px;
+  width: 100%;
+  margin: 0;
 }
 .page-enterprise-europe-network #block-system-main .node-article .field-type-text-with-summary p,
 .page-national-focal-points #block-system-main .node-article .field-type-text-with-summary p,
@@ -20299,7 +20329,7 @@ blockquote.image-field-caption p {
   width: 100%;
   margin: 0;
   padding: 0;
-  font-size: 10px;
+  font-size: 11.2px;
   color: #000;
   float: left;
 }
@@ -24584,24 +24614,31 @@ body.front .homepage-slider blockquote.image-field-caption p {
   }
   /*end press room*/
   /*news*/
-  .page-news .main-container h1 {
+  .page-news .main-container h1,
+  .page-media-centre-press-room .main-container h1 {
     border-bottom: 1px dotted #749b00;
     padding-bottom: 0.7em;
   }
-  .page-news .view-news .views-row {
+  .page-news .view-news .views-row,
+  .page-media-centre-press-room .view-news .views-row {
     padding-left: 0px;
     padding-right: 0px;
   }
-  .page-news .view-news .views-row .field-name-field-image {
+  .page-news .view-news .views-row .field-name-field-image,
+  .page-media-centre-press-room .view-news .views-row .field-name-field-image {
     display: none;
   }
-  .page-news .view-news .views-row .more-link {
+  .page-news .view-news .views-row .more-link,
+  .page-media-centre-press-room .view-news .views-row .more-link {
     display: inline-block;
     padding-left: 0;
   }
-  .page-news .view-news.view-display-id-oshnews_list.container .field-type-datetime,
-  .page-news .view-news.view-display-id-oshnews_list.container .field-name-field-summary,
-  .page-news .view-news.view-display-id-oshnews_list.container .field-name-body {
+  .page-news .view-news .views-row .field-type-datetime,
+  .page-media-centre-press-room .view-news .views-row .field-type-datetime,
+  .page-news .view-news .views-row .field.field-name-field-summary,
+  .page-media-centre-press-room .view-news .views-row .field.field-name-field-summary,
+  .page-news .view-news .views-row .field-name-body,
+  .page-media-centre-press-room .view-news .views-row .field-name-body {
     margin-left: 15px;
     margin-right: 15px;
   }
