--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -1420,13 +1420,13 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
   border: 0;
   margin-top: 0 !important;
   margin-bottom: 0 !important;
-  width: 100%;
+  width: 80%;
   margin: 0 auto;
   height: 125px;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: center;
-  padding-bottom: 25px;
+  padding-bottom: 20px;
 }
 .content {
   margin-top: 3em;
@@ -7941,6 +7941,9 @@ body .form-control {
   .start-browsing .content-boxes {
     width: 72%;
   }
+  .page_title h1 {
+    width: 70%;
+  }
 }
 @media (max-width: 1465px) {
   .intro-splash-20 .views-row-first > p:nth-child(4) {
@@ -8158,8 +8161,10 @@ body .form-control {
   }
   .page_title h1 {
     font-size: 2.6em;
-    width: 480px;
-    padding-bottom: 0.5em;
+    width: 100%;
+    display: flex;
+    padding-bottom: 0;
+    align-items: center;
   }
   #block-text-resize-0,
   #block-hwc-hwc-print-friendly {
