--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -198,8 +198,10 @@
 
 	.page_title h1{
 		font-size: 2.6em;
-	    width: 480px;
-	    padding-bottom: 0.5em;
+	    width: 100%;
+	    display: flex;
+	    padding-bottom: 0;
+    	align-items: center;
 	}
 
 	#block-text-resize-0, #block-hwc-hwc-print-friendly{
