--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1622,7 +1622,6 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 	margin-bottom: 2em;
 	float: left;
 	width: 100%;
-
 	h1{
 		color: #FFF;
 		font-size: 3.2em;
@@ -1630,13 +1629,13 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 		border:0;
 		margin-top: 0 !important;
 		margin-bottom: 0 !important;
-	    width: 100%;
+	    width: 80%;
 	    margin: 0 auto;
 	    height: 125px;
     	display: flex;
-    	align-items: flex-end;
+    	align-items: center;
     	justify-content: center;
-   	 	padding-bottom: 25px;
+   	 	padding-bottom: 20px;
 	}
 }
 
